<resources>
    <string name="app_name">TouchLogger</string>
    <string name="action_newpin">New Pin</string>
    <string name="action_settings">Settings</string>
    <string name="setting_accelerometer">Use Accelerometer</string>
    <string name="setting_gyroscope">Use Gyroscope</string>
    <string name="setting_magnetometer">Use Magnetometer</string>
    <string name="setting_proximity">Use Proximity</string>
    <string name="setting_barometer">Use Barometer</string>
    <string name="setting_ambient_light">Use Ambient Light</string>
    <string name="setting_rotation_vector">Use Rotation Vector</string>
    <string name="setting_switch_desc">Enable or disable data retrieval from this sensor</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="push">Push↗</string>
    <string name="collected">collected</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Sensors-->
    <string name="accelerometer">accelerometer</string>
    <string name="gyroscope">gyroscope</string>
    <string name="magnetometer">magnetometer</string>
    <string name="proximity">proximity</string>
    <string name="barometer">barometer</string>
    <string name="ambient_light">ambient_light</string>
    <string name="rotation_vector">rotation_vector</string>

    <!--Other features-->
    <string name="digit">digit</string>
</resources>
